--- a/card game/styles.css
+++ b/card game/styles.css
@@ -1,7 +1,43 @@
-div {
-    border-style: solid;
+.container {
+    /* height: 100px; */
+    /* background-color: red; */
+    margin: auto; 
+    width: 80%
 }
 
-.kaidyn {
-    background-image: url("Card-back.png");
+.scoreboard{
+    display: flex;
+}
+
+.start-button{
+    font-size: 20px;
+    width:150px;
+    height:50px;
+}
+
+.countdown{
+    margin-left:20px;
+    font-size: 40px;
+}
+
+.gameBoard{
+    margin-top: 20px;
+/*    border-style: solid;*/
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.cardWrapper{
+    border-style: solid;
+    border-color: green;
+    height: 300px;
+    width: 200px;
+}
+
+.card-face-front {
+    background-image: url("card-back.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
