--- a/card game/styles.css
+++ b/card game/styles.css
@@ -28,16 +28,54 @@
     gap: 20px;
 }
 
-.cardWrapper{
-    border-style: solid;
-    border-color: green;
-    height: 300px;
-    width: 200px;
-}
-
 .card-face-front {
-    background-image: url("card-back.png");
+    background-image: url("Card-back.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+}
+
+.card-face-back {
+    background-image: url("Card-front.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    transform: rotateY(180deg);
+}
+
+.card-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* line-height: 260px; */
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    font-size: 60px;
+    backface-visibility: hidden;
+ 
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */             
+}
+
+.card {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    transform-style: preserve-3d;
+    transform-origin: center right;
+    transition: transform 0.5s;
+}
+
+.cardWrapper {
+    width: 200px;
+    height: 300px;
+    perspective: 600px;
+    cursor: pointer;
 }
